--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 const CACHE_NAME = 'offline-cache-v1';
 const urlsToCache = [
-  '/',                  // Startseite
-  '/index.html',        // Hauptseite
+  '/',                  
+  '/index.html',        // Startseite
   '/patient1.html',     // Beispiel-Unterseite
   '/patient2.html',     // Weitere Unterseiten
   '/patient3.html',
