--- a/Patient2.html
+++ b/Patient2.html
@@ -138,7 +138,7 @@
 <!-- Modal für Bildanzeige -->
 <div id="modal">
     <div id="modalContent">
-        <img src="VU_untersch.jpg" alt="VU untersch">
+        <img src="VU untersch.jpg" alt="VU untersch">
         <span id="closeModal">Schließen</span>
     </div>
 </div>
