--- a/Patient2.html
+++ b/Patient2.html
@@ -16,7 +16,15 @@
             min-height: 100vh;
             background-color: #f4f4f9;
         }
-
+    /* Container für Buttons */
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 90%;
+            max-width: 600px;
+            margin-top: 40px; /* Abstand vom oberen Rand */
+            margin-bottom: 100px; /* Platz für Einsatzabbruch-Button */
         .btn {
             width: 90%;
             max-width: 600px;
