--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,7 @@
     <!-- Menüleiste -->
     <header>
         <button id="menuButton">☰ Menü</button>
+         <img src="Logo entwurf1.jpg" alt="Logo entwurf1" id="headerImage">
     </header>
 
     <!-- Kamera öffnen Hinweis -->
