--- a/Index.html
+++ b/Index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR-Code Scanner</title>
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="Logo App.jpg" type="image/jpeg">
 </head>
 <body>
 
     <!-- Menüleiste -->
     <header>
         <button id="menuButton">☰ Menü</button>
-         <img src="Logo entwurf1.jpg" alt="Logo entwurf1" id="headerImage">
+    
     </header>
 
     <!-- Kamera öffnen Hinweis -->
