--- a/Patient1.html
+++ b/Patient1.html
@@ -123,28 +123,28 @@
 <!-- Buttons -->
 <div class="button-container">
     <button id="btn1" class="btn">
-        Pat.W 28 Jahre alt.<br>Patientin wirkt blass, am Unterschenkel ist eine stark pulsierende Blutung zu sehen.
+        Pat.M 38 Jahre alt.<br>Pat. klagt über starke Bauchschmerzen
         <span>⬇ Weitere Informationen</span>
     </button>
     <button id="btn2" class="btn hidden">
-        Die Pat. hat mehrere kleine Hämatome an den Armen.<br>Sie ist nicht eingeklemmt und frei zugänglich.
+       Der Pat. gibt an,<br>dass die Schmerzen durch den Aufprall verursacht wurden
         <span>⬇ Weitere Informationen</span>
     </button>
     <button id="btnCountdown1" class="btn hidden">
-        Sofortmaßnahme: Tournequet<br><span id="countdown1" class="countdown"></span>
+        Sofortmaßnahme: Beine hochlagern<br><span id="countdown1" class="countdown"></span>
     </button>
     <button id="btnCountdown2" class="btn hidden">
-        Sofortmaßnahm: Druckverband<br><span id="countdown2" class="countdown"></span>
+        Sofortmaßnahm: stabile Seitenlage<br><span id="countdown2" class="countdown"></span>
     </button>
     <button id="btnCountdown3" class="btn hidden">
        Keine Sofortmaßnahme <br><span id="countdown3" class="countdown"></span>
     </button>
     <button id="btn3" class="btn hidden">
-        Die Blutung konnte mit der Sofortmaßnahme erstversorgt werden.
+       Der Pat. hat weiter starke Schmerzen
         <span>⬇ Weitere Informationen</span>
     </button>
     <button id="btnCustom" class="btn hidden">
-        Die Pat. wird bewusstlos<br>Keine Atmung vorhanden<br>Kein zentraler Puls tastbar
+       Der Pat. hat weiter starke Schmerzen 
     </button>
     <button id="btn4" class="btn hidden">
         Sichtungskategorie wählen<br>und zum nächsten Patienten!
@@ -154,7 +154,7 @@
 <!-- Modal für Bildanzeige -->
 <div id="modal">
     <div id="modalContent">
-        <img src="VU untersch.jpg" alt="VU untersch">
+        <img src="VU Bauch.jpeg" alt="VU Bauch">
         <span id="closeModal">Schließen</span>
     </div>
 </div>
