--- a/Patient4.html
+++ b/Patient4.html
@@ -127,17 +127,17 @@
         <span>⬇ Weitere Informationen</span>
     </button>
     <button id="btn2" class="btn hidden">
-        Die Pat. gibt weiter Schmerzen im Thoraxbereich an.<br>Ausgelöst durch den Gurt im PKW.<br>Der Arm weist eine sichtbare geschlossene Fehlstellung vor.
+        Die Pat. gibt weitere Schmerzen im Thoraxbereich an.<br>Ausgelöst durch den Gurt im PKW.<br>Der Arm weist eine sichtbare geschlossene Fehlstellung vor.
         <span>⬇ Weitere Informationen</span>
     </button>
     <button id="btnCountdown1" class="btn hidden">
-        Sofortmaßnahme einleiten? Ja<br><span id="countdown1" class="countdown"></span>
+        Sofortmaßnahme:<br>Anlage Schienungsmaterial<br><span id="countdown1" class="countdown"></span>
     </button>
     <button id="btnCountdown2" class="btn hidden">
-        Sofortmaßnahme einleiten? Nein<br><span id="countdown2" class="countdown"></span>
+        Sofortmaßnahme:<br> Keine Sofortmaßnahme nötig<br><span id="countdown2" class="countdown"></span>
     </button>
     <button id="btn3" class="btn hidden">
-        Die Pat. gibt weiter Schmerzen an.<br>Sonst scheint sie stabil zu sein.
+        Die Pat. gibt weiter Schmerzen an.<br>Die Pat. ist weiter ABC-Stabil
         <span>⬇ Weitere Informationen</span>
     </button>
     <button id="btn4" class="btn hidden">
@@ -199,11 +199,11 @@
     });
 
     document.getElementById("btnCountdown1").addEventListener("click", function () {
-        startCountdown("btnCountdown1", "countdown1", "btn3", "btnCountdown2", 30);
+        startCountdown("btnCountdown1", "countdown1", "btn3", "btnCountdown2", 90);
     });
 
     document.getElementById("btnCountdown2").addEventListener("click", function () {
-        startCountdown("btnCountdown2", "countdown2", "btn3", "btnCountdown1", 5);
+        startCountdown("btnCountdown2", "countdown2", "btn3", "btnCountdown1", 1);
     });
 
     document.getElementById("btn3").addEventListener("click", function () {
